Fix readability: change font colour of details to black

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -154,6 +154,7 @@ a {
   justify-content: center;
   flex-direction: column;
   background: rgba(255, 255, 255, 0.95);
+  color: black;
   box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.1);
   border-radius: .2em;
 }
